--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
 	</head>
 	<body>
 		<script type="module" src="compiled/App.js"></script>
+		<script type="module" src="compiled/debug-settings.js"></script>
 	</body>
 </html>
