added method `App.renderAndUpdate`

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 	<body>
 		<script type="module" src="compiled/App.js"></script>
 		<script type="module" src="compiled/debug-settings.js"></script>
+
+		<div id="lines-container"></div>
 	</body>
 </html>
