moved app initialization to a separate file
This is needed so that, when running tests, it doesn't try to initialize the app when loading dependencies before JSDOM has been set up. (The new file app-initializer.ts will never be run during the Mocha tests, which is a good thing).

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<body>
 		<script type="module" src="compiled/App.js"></script>
 		<script type="module" src="compiled/debug-settings.js"></script>
+		<script type="module" src="compiled/app-initializer.mjs"></script>
 
 		<div id="lines-container"></div>
 	</body>
