--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 
 	</head>
 	<body>
-		<script type="module" src="compiled/App.js"></script>
-		<script type="module" src="compiled/debug-settings.js"></script>
+		<script type="module" src="compiled/App.mjs"></script>
 		<script type="module" src="compiled/app-initializer.mjs"></script>
+		<script type="module" src="compiled/debug-settings.mjs"></script>
 
 		<div id="lines-container"></div>
 	</body>
