--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-
+		<link rel="stylesheet" href="stylesheets/main.css">
 	</head>
 	<body>
 		<script type="module" src="compiled/App.mjs"></script>
