--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="stylesheets/main.css">
+		<link rel="stylesheet" href="stylesheets/cursors.css">
 	</head>
 	<body>
 		<script type="module" src="compiled/app-initializer.mjs"></script>
