--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 	<head>
 		<link rel="stylesheet" href="stylesheets/main.css">
 		<link rel="stylesheet" href="stylesheets/cursors.css">
+
+		<link rel="stylesheet" href="stylesheets/math-components/fraction.css">
 	</head>
 	<body>
 		<script type="module" src="compiled/app-initializer.mjs"></script>
