fixed incorrectly updated element IDs
I meant to include these in commit 8f7f11a0a2e100e9a4fc12cb160f5f2e150b467d, but I forgot.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 		<script type="module" src="compiled/app-initializer.mjs"></script>
 		<script type="module" src="compiled/debug-settings.mjs"></script>
 
-		<div id="lines-container"></div>
+		<div id="document-container"></div>
 	</body>
 </html>
