user can now type multiplication signs with *

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script type="module" src="compiled/app-initializer.mjs"></script>
 		<script type="module" src="compiled/debug-settings.mjs"></script>
 		
+		<script type="module" src="compiled/math-components/initializers/MathSymbol.mjs"></script>
 		<script type="module" src="compiled/math-components/initializers/Fraction.mjs"></script>
 
 		<div id="document-container"></div>
