added superscripts and subscripts

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
 		<link rel="stylesheet" href="stylesheets/math-components/math-symbol.css">
 		<link rel="stylesheet" href="stylesheets/math-components/fraction.css">
+		<link rel="stylesheet" href="stylesheets/math-components/superscript-subscript.css">
 	</head>
 	<body>
 		<script type="module" src="compiled/app-initializer.mjs"></script>
