user can now insert superscripts and subscripts

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		
 		<script type="module" src="compiled/math-components/initializers/MathSymbol.mjs"></script>
 		<script type="module" src="compiled/math-components/initializers/Fraction.mjs"></script>
+		<script type="module" src="compiled/math-components/initializers/SuperscriptSubscript.mjs"></script>
 
 		<div id="document-container"></div>
 	</body>
