--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script type="module" src="compiled/math-components/initializers/MathSymbol.mjs"></script>
 		<script type="module" src="compiled/math-components/initializers/Fraction.mjs"></script>
 		<script type="module" src="compiled/math-components/initializers/SuperscriptSubscript.mjs"></script>
+		<script type="module" src="compiled/math-components/initializers/alphabets.mjs"></script>
 
 		<div id="document-container"></div>
 	</body>
