improved scrollbar styling

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<link rel="stylesheet" href="stylesheets/main.css">
 		<link rel="stylesheet" href="stylesheets/cursors.css">
+		<link rel="stylesheet" href="stylesheets/scrollbars.css">
 
 		<link rel="stylesheet" href="stylesheets/math-components/math-symbol.css">
 		<link rel="stylesheet" href="stylesheets/math-components/fraction.css">
