--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script type="module" src="compiled/debug-settings.mjs"></script>
 		<script type="module" src="compiled/math-components/initializers/all-initializers.mjs"></script>
 
+		<div id="tabs-container"></div>
 		<div id="document-container"></div>
 	</body>
 </html>
