added styling for tabs

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 		<link rel="stylesheet" href="stylesheets/main.css">
 		<link rel="stylesheet" href="stylesheets/cursors.css">
 		<link rel="stylesheet" href="stylesheets/scrollbars.css">
+		<link rel="stylesheet" href="stylesheets/tabs.css">
 
 		<link rel="stylesheet" href="stylesheets/math-components/math-symbol.css">
 		<link rel="stylesheet" href="stylesheets/math-components/fraction.css">
