removed unnecessary document-container

--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
 		<script type="module" src="compiled/math-components/initializers/all-initializers.mjs"></script>
 
 		<div id="tabs-container"></div>
-		<div id="document-container"></div>
+		<div id="math-document"></div>
 	</body>
 </html>
